correction z-index header

--- a/portail/themes/theme_boosted/css/components/header.css
+++ b/portail/themes/theme_boosted/css/components/header.css
@@ -34,6 +34,7 @@
     padding-left: 0;
     margin: 0 !important;
 }
+
 #main_nav .logo img{
     transition: all .1s ease-in-out;
     width: 140px;
@@ -135,7 +136,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    z-index:10;
+    z-index:1000;
     border-color: black;
     padding: 20px 0px;
     transition-timing-function: ease-in-out;
